Initial (under-tested) work on switch to Socket.io from JavaWebsocket